fix: prevent horizontal overflow in portfolio-block container

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -258,6 +258,7 @@
 .portfolio-block {
     text-align: center;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .slider-viewport {
